--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,11 @@
 build/
 CMakeSettings.json
 
+# Photogon work files
+photogon/o
+photogon/out.txt
+photogon/**/*.blend
+
 # Visual Studio stuff
 .vs/
 
